--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,9 @@ main h1 {
 }
 
 main>a {
+    display: block;
+    width: fit-content;
+    margin: 1rem 0;
     padding: 1rem;
     background-color: var(--background-color);
     border-radius: 5px;
@@ -275,6 +278,12 @@ main>a {
     padding: 0.5rem 1rem;
 }
 
+code {
+    background-color: var(--base-color);
+    padding: 0.2rem 0.4rem;
+    border-radius: 5px;
+    font-family: 'Courier New', Courier, monospace;
+}
 
 /* タブレット対応 */
 @media (max-width: 960px) {
