--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 * {
-    font-family: 'Inter', 'Noto Sans JP', sans-serif;
+    font-family: 'Roboto', 'Inter', 'Noto Sans JP', sans-serif;
     box-sizing: border-box;
 }
 
