--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ section {
     background-color: #ffffff;
     border-radius: 1rem;
     margin: 2rem auto;
-    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     padding-bottom: 1rem;
 }
 
@@ -260,7 +260,7 @@ main h1 {
     border-radius: 10px;
 }
 
-.main__student table{
+.main__student table {
     width: calc(100% - 2rem);
 }
 
@@ -284,6 +284,25 @@ code {
     padding: 0.2rem 0.4rem;
     border-radius: 5px;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.help-button {
+    background-color: transparent;
+    border: none;
+    color: var(--text-color-default);
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0;
+    margin-left: 0.5rem;
+}
+
+.help-button i {
+    margin: none;
+}
+
+.help-button:active {
+    background-color: transparent;
+    color: var(--text-color-default);
 }
 
 /* タブレット対応 */
