--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,16 @@ textarea {
     height: 3rem;
 }
 
+select {
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 1px solid var(--main-color);
+    box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.2) inset;
+    color: var(--text-color-default);
+    background-color: var(--background-color);
+    border-radius: 5px;
+}
+
 button {
     color: var(--text-color-white);
     background-color: var(--main-color);
