--- a/script/notice/notice.css
+++ b/script/notice/notice.css
@@ -176,9 +176,11 @@ nav a:hover i {
 
 /* Googleでログイン */
 .gsi-material-button {
+    user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    appearance: none;
     -webkit-appearance: none;
     background-color: WHITE;
     background-image: none;
