--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,12 @@ section h3 {
     font-weight: 600;
 }
 
+section h4 {
+    margin: 1rem 1.5rem 0.5rem 1.5rem;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
 section p,
 section li {
     margin: 0.5rem 1.5rem 0.5rem 1.5rem;
@@ -180,7 +186,7 @@ section ol {
     margin: 0.5rem 1.5rem 0.5rem 1.5rem;
 }
 
-section img {
+section>img {
     display: block;
     margin: 1rem 1rem;
 }
@@ -205,7 +211,8 @@ main h1 {
 }
 
 table {
-    width: 100%;
+    width: calc(100% - 2rem);
+    margin: 1rem;
     border-collapse: collapse;
 }
 
@@ -253,6 +260,10 @@ button {
     cursor: pointer;
     box-shadow: var(--shadow-sm);
     transition: background-color 0.2s ease, box-shadow 0.2s ease, transform 0.1s ease;
+}
+
+:not(div)>button {
+    margin: 0 0.5rem;
 }
 
 button:hover {
@@ -306,6 +317,27 @@ code {
 .content-list-item h3 {
     margin: 0;
     font-weight: 600;
+}
+
+iframe {
+    border: none;
+    border-radius: var(--radius-sm);
+    box-shadow: var(--shadow-sm);
+    margin: 1rem;
+    width: calc(100% - 2rem);
+    height: 500px;
+}
+
+.format-buttons {
+    margin: 1rem 2rem;
+}
+
+.format-buttons button {
+    margin-right: 5px;
+    padding: 5px 10px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 2.5rem;
 }
 
 /* タブレット対応 */
