--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@ footer a {
     color: var(--text-color-white);
 }
 
+footer a:hover {
+    color: var(--text-color-white);
+}
+
 ::selection,
 ::-moz-selection {
     color: var(--text-color-white);
@@ -111,6 +115,11 @@ a {
 
 a:hover {
     color: var(--accent-color);
+}
+
+a[href^="http"],
+a[href^="//"] {
+    cursor: alias;
 }
 
 a[href^="http"]:after,
